# rest_api

./: .coverage  .env  env  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: b37d1fe50ed4_init.py
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/base/16388/: 113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13397  13398  13398_fsm  13398_vm  13403  13403_fsm  13403_vm  13408  13408_fsm  13408_vm  13412  16389  16392  16394  16395  16400  16401  16403  16405  16406  16411  16412  16419  16420  (+183 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
